--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -26,6 +26,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
     "expo-splash-screen": "~0.29.10",
@@ -47,12 +48,13 @@
     "source-map-generator": "^0.8.0",
     "styled-components": "^6.1.13",
     "victory": "^37.3.2",
-    "victory-native": "^41.9.0"
+    "victory-native": "^41.9.0",
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.1",
