--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "source-map-generator": "^0.8.0",
     "styled-components": "^6.1.13",
     "victory": "^37.3.2",
-    "victory-native": "^41.9.0",
+    "victory-native": "^41.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
