--- a/package.json
+++ b/package.json
@@ -16,40 +16,49 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "^0.13.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
+    "expo-screen-orientation": "^8.0.0",
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
+    "expo-tracking-transparency": "^5.0.0",
     "expo-web-browser": "~14.0.1",
     "fs-extra": "^11.2.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-appsflyer": "^6.15.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-onesignal": "^5.2.6",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.0.0",
     "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-webview": "^13.12.2",
+    "regenerator-runtime": "^0.14.1",
     "source-map-generator": "^0.8.0",
     "styled-components": "^6.1.13",
     "victory": "^37.3.2",
-    "victory-native": "^41.9.0"
+    "victory-native": "^41.9.0",
+    "expo-updates": "~0.26.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -60,7 +69,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.3"
   },
   "private": true
 }
