--- a/app.json
+++ b/app.json
@@ -27,9 +27,9 @@
           }
         ]
       },
-      "bundleIdentifier": "com.fintrackjor",
+      "bundleIdentifier": "com.fintrack",
       "associatedDomains": [
-        "applinks:fintracker.onelink.me"
+        "applinks:fintrack.onelink.me"
       ]
     },
     "android": {
